added all validation in form fields

--- a/mcarbonPortal/src/app/dynamic-support/dynamic-support.component.scss
+++ b/mcarbonPortal/src/app/dynamic-support/dynamic-support.component.scss
@@ -185,4 +185,10 @@
   margin-right: -15px;
 }
 
+::ng-deep .tooltip-style.mat-tooltip {
+  color: white !important;
+  background-color: #00a796 !important;
+  font-weight: bold;
+  font-size: 0.75rem;
+}
 
