--- a/mcarbonPortal/src/app/form-dialog/form-dialog.component.html
+++ b/mcarbonPortal/src/app/form-dialog/form-dialog.component.html
@@ -8,12 +8,15 @@
 
   <mat-tab-group
     #tabGroup
-    [formGroup]="userForm"
-    *ngIf="userForm"
     [dynamicHeight]="false"
     mat-align-tabs="center"
+    (selectedTabChange)="onTabChanged($event)"
   >
-    <mat-tab label="Basic Information">
+    <mat-tab
+      label="Basic Information"
+      [formGroup]="userForm1"
+      *ngIf="userForm1"
+    >
       <div class="container">
         <div class="row">
           <div class="col-md-5 offset-md-1">
@@ -25,29 +28,29 @@
                     type="text"
                     placeholder="First Name"
                     formControlName="user_fname"
-                    [matTooltip]="getErrorMessage('user_fname')"
+                    [matTooltip]="getErrorMessage1('user_fname')"
                     matTooltipClass="tooltip-style"
                   />
                   <mat-error
                     *ngIf="
-                      userForm.get('user_fname').invalid &&
-                      userForm.get('user_fname').errors.required
+                      userForm1.get('user_fname').invalid &&
+                      userForm1.get('user_fname').errors.required
                     "
                   >
                     First Name is required
                   </mat-error>
                   <mat-error
                     *ngIf="
-                      userForm.get('user_fname').invalid &&
-                      userForm.get('user_fname').errors.minlength
+                      userForm1.get('user_fname').invalid &&
+                      userForm1.get('user_fname').errors.minlength
                     "
                   >
                     First Name should be at least 4 characters long
                   </mat-error>
                   <mat-error
                     *ngIf="
-                      userForm.get('user_fname').invalid &&
-                      userForm.get('user_fname').errors.maxlength
+                      userForm1.get('user_fname').invalid &&
+                      userForm1.get('user_fname').errors.maxlength
                     "
                   >
                     First Name should not exceed 20 characters
@@ -63,25 +66,33 @@
                     type="tel"
                     placeholder="Mobile Number"
                     formControlName="mobile"
-                    [matTooltip]="getErrorMessage('mobile')"
+                    [matTooltip]="getErrorMessage1('mobile')"
                     matTooltipClass="tooltip-style"
                   />
                   <mat-error
                     *ngIf="
-                      userForm.get('mobile').invalid &&
-                      userForm.get('mobile').errors.required
+                      userForm1.get('mobile').invalid &&
+                      userForm1.get('mobile').errors.required
                     "
                   >
                     Mobile Number is required
                   </mat-error>
                   <mat-error
                     *ngIf="
-                      userForm.get('mobile').invalid &&
-                      userForm.get('mobile').errors.minlength &&
-                      userForm.get('mobile').errors.maxlength
+                      userForm1.get('mobile').invalid &&
+                      (userForm1.get('mobile').errors.minlength ||
+                        userForm1.get('mobile').errors.maxlength)
                     "
                   >
                     Mobile Number should be of 10-digits
+                  </mat-error>
+                  <mat-error
+                    *ngIf="
+                      userForm1.get('mobile').invalid &&
+                      userForm1.get('mobile').errors.pattern
+                    "
+                  >
+                    Mobile Number should only contain digits
                   </mat-error>
                 </mat-form-field>
               </div>
@@ -94,7 +105,7 @@
                     matInput
                     [matDatepicker]="picker"
                     formControlName="acc_exp_date"
-                    [matTooltip]="getErrorMessage('acc_exp_date')"
+                    [matTooltip]="getErrorMessage1('acc_exp_date')"
                     matTooltipClass="tooltip-style"
                   />
                   <mat-hint>MM/DD/YYYY</mat-hint>
@@ -105,16 +116,16 @@
                   <mat-datepicker #picker></mat-datepicker>
                   <mat-error
                     *ngIf="
-                      userForm.get('acc_exp_date').invalid &&
-                      userForm.get('acc_exp_date').errors.required
+                      userForm1.get('acc_exp_date').invalid &&
+                      userForm1.get('acc_exp_date').errors.required
                     "
                   >
                     Expiry Date is required
                   </mat-error>
                   <mat-error
                     *ngIf="
-                      userForm.get('acc_exp_date').invalid &&
-                      userForm.get('acc_exp_date').errors.mismatch
+                      userForm1.get('acc_exp_date').invalid &&
+                      userForm1.get('acc_exp_date').errors.mismatch
                     "
                   >
                     Expiry Date should not be in the past
@@ -130,29 +141,29 @@
                     type="text"
                     placeholder="Login ID"
                     formControlName="login_id"
-                    [matTooltip]="getErrorMessage('login_id')"
+                    [matTooltip]="getErrorMessage1('login_id')"
                     matTooltipClass="tooltip-style"
                   />
                   <mat-error
                     *ngIf="
-                      userForm.get('login_id').invalid &&
-                      userForm.get('login_id').errors.required
+                      userForm1.get('login_id').invalid &&
+                      userForm1.get('login_id').errors.required
                     "
                   >
                     Login ID is required
                   </mat-error>
                   <mat-error
                     *ngIf="
-                      userForm.get('login_id').invalid &&
-                      userForm.get('login_id').errors.minlength
+                      userForm1.get('login_id').invalid &&
+                      userForm1.get('login_id').errors.minlength
                     "
                   >
                     Login ID should be at least 6 characters long
                   </mat-error>
                   <mat-error
                     *ngIf="
-                      userForm.get('login_id').invalid &&
-                      userForm.get('login_id').errors.maxlength
+                      userForm1.get('login_id').invalid &&
+                      userForm1.get('login_id').errors.maxlength
                     "
                   >
                     Login ID should not exceed 20 characters
@@ -171,29 +182,29 @@
                     type="text"
                     placeholder="Last Name"
                     formControlName="user_lname"
-                    [matTooltip]="getErrorMessage('user_lname')"
+                    [matTooltip]="getErrorMessage1('user_lname')"
                     matTooltipClass="tooltip-style"
                   />
                   <mat-error
                     *ngIf="
-                      userForm.get('user_lname').invalid &&
-                      userForm.get('user_lname').errors.required
+                      userForm1.get('user_lname').invalid &&
+                      userForm1.get('user_lname').errors.required
                     "
                   >
                     Last Name is required
                   </mat-error>
                   <mat-error
                     *ngIf="
-                      userForm.get('user_lname').invalid &&
-                      userForm.get('user_lname').errors.minlength
+                      userForm1.get('user_lname').invalid &&
+                      userForm1.get('user_lname').errors.minlength
                     "
                   >
                     Last Name should be at least 4 characters long
                   </mat-error>
                   <mat-error
                     *ngIf="
-                      userForm.get('user_lname').invalid &&
-                      userForm.get('user_lname').errors.maxlength
+                      userForm1.get('user_lname').invalid &&
+                      userForm1.get('user_lname').errors.maxlength
                     "
                   >
                     Last Name should not exceed 20 characters
@@ -209,21 +220,21 @@
                     type="email"
                     placeholder="Email"
                     formControlName="email"
-                    [matTooltip]="getErrorMessage('email')"
+                    [matTooltip]="getErrorMessage1('email')"
                     matTooltipClass="tooltip-style"
                   />
                   <mat-error
                     *ngIf="
-                      userForm.get('email').invalid &&
-                      userForm.get('email').errors.required
+                      userForm1.get('email').invalid &&
+                      userForm1.get('email').errors.required
                     "
                   >
                     Email is required
                   </mat-error>
                   <mat-error
                     *ngIf="
-                      userForm.get('email').invalid &&
-                      userForm.get('email').errors.email
+                      userForm1.get('email').invalid &&
+                      userForm1.get('email').errors.email
                     "
                   >
                     Invalid Email
@@ -233,14 +244,22 @@
             </div>
 
             <div class="row justify-content-center align-items-center">
-              <img
-                *ngIf="photoControl"
-                [src]="photoUrl"
-                style="border-radius: 50%"
-                alt="selected logo"
-                height="60%"
-                width="60%"
-              />
+              <ng-container *ngIf="checkImg()"
+                ><img
+                  [src]="photoUrl"
+                  style="border-radius: 50%"
+                  alt="selected logo"
+                  height="150px"
+                  width="150px"
+              /></ng-container>
+              <ng-container *ngIf="!checkImg()"
+                ><img
+                  src="../../assets/img/user_profile.png"
+                  style="border-radius: 50%"
+                  alt="selected logo"
+                  height="150px"
+                  width="150px"
+              /></ng-container>
             </div>
             <div class="row justify-content-center align-items-center">
               <input
@@ -258,7 +277,7 @@
       </div>
     </mat-tab>
 
-    <mat-tab label="Security">
+    <mat-tab label="Security" [formGroup]="userForm2" *ngIf="userForm2">
       <div class="container">
         <div class="row">
           <div class="col-md-5 offset-md-1">
@@ -269,34 +288,34 @@
                 placeholder="Password"
                 formControlName="password"
                 [(ngModel)]="password"
-                [matTooltip]="getErrorMessage('password')"
+                [matTooltip]="getErrorMessage2('password')"
                 matTooltipClass="tooltip-style"
               />
               <mat-error
                 *ngIf="
-                  userForm.get('password').invalid &&
-                  userForm.get('password').errors.required
+                  userForm2.get('password').invalid &&
+                  userForm2.get('password').errors.required
                 "
               >
                 Password is required
               </mat-error>
               <mat-error
                 *ngIf="
-                  userForm.get('password').invalid &&
-                  userForm.get('password').errors.minlength
+                  userForm2.get('password').invalid &&
+                  userForm2.get('password').errors.minlength
                 "
               >
                 Password should be at least characters long
               </mat-error>
               <mat-error
                 *ngIf="
-                  userForm.get('password').invalid &&
-                  userForm.get('password').errors.maxlength
+                  userForm2.get('password').invalid &&
+                  userForm2.get('password').errors.maxlength
                 "
               >
                 Password should not exceed 20 characters
               </mat-error>
-              <mat-error *ngIf="userForm.get('password').invalid">
+              <mat-error *ngIf="userForm2.get('password').invalid">
                 Password must contain at least one capital letter, one small
                 letter, one digit, and one special character
               </mat-error>
@@ -310,17 +329,17 @@
                 placeholder="Confirm Password"
                 formControlName="confirm_password"
               />
-              <mat-error
+              <!-- <mat-error
                 *ngIf="userForm.hasError('mismatch', 'confirm_password')"
                 >Passwords do not match</mat-error
-              >
+              > -->
             </mat-form-field>
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-10 offset-md-1">
-            <mat-label>Select the Access you want:</mat-label>
+            <mat-label class="label">Select the Access Permissions</mat-label>
           </div>
         </div>
 
@@ -384,7 +403,7 @@
       </div>
     </mat-tab>
 
-    <mat-tab label="Settings">
+    <mat-tab label="Settings" [formGroup]="userForm3" *ngIf="userForm3">
       <div class="container">
         <div class="row">
           <div class="col-md-5 offset-md-1">
@@ -394,20 +413,20 @@
                 type="number"
                 placeholder="Maximum Active Sessions"
                 formControlName="max_active_sessions"
-                [matTooltip]="getErrorMessage('max_active_sessions')"
+                [matTooltip]="getErrorMessage3('max_active_sessions')"
                 matTooltipClass="tooltip-style"
               />
               <mat-error
                 *ngIf="
-                  userForm.get('max_active_sessions').invalid &&
-                  userForm.get('max_active_sessions').errors.required
+                  userForm3.get('max_active_sessions').invalid &&
+                  userForm3.get('max_active_sessions').errors.required
                 "
                 >Max Active Sessions is required
               </mat-error>
               <mat-error
                 *ngIf="
-                  userForm.get('max_active_sessions').invalid &&
-                  userForm.get('max_active_sessions').errors.min
+                  userForm3.get('max_active_sessions').invalid &&
+                  userForm3.get('max_active_sessions').errors.min
                 "
                 >Max Active Sessions should be greater than 0
               </mat-error>
@@ -420,21 +439,21 @@
                 type="number"
                 placeholder="Maximum Duration (in Minutes)"
                 formControlName="max_duration"
-                [matTooltip]="getErrorMessage('max_duration')"
+                [matTooltip]="getErrorMessage3('max_duration')"
                 matTooltipClass="tooltip-style"
               />
               <mat-error
                 *ngIf="
-                  userForm.get('max_duration').invalid &&
-                  userForm.get('max_duration').errors.required
+                  userForm3.get('max_duration').invalid &&
+                  userForm3.get('max_duration').errors.required
                 "
               >
                 Max Duration is required
               </mat-error>
               <mat-error
                 *ngIf="
-                  userForm.get('max_duration').invalid &&
-                  userForm.get('max_duration').errors.min
+                  userForm3.get('max_duration').invalid &&
+                  userForm3.get('max_duration').errors.min
                 "
                 >Max Durations should be greater than 0
               </mat-error>
@@ -450,21 +469,21 @@
                 type="number"
                 placeholder="Maximum Participants"
                 formControlName="max_participants"
-                [matTooltip]="getErrorMessage('max_participants')"
+                [matTooltip]="getErrorMessage3('max_participants')"
                 matTooltipClass="tooltip-style"
               />
               <mat-error
                 *ngIf="
-                  userForm.get('max_participants').invalid &&
-                  userForm.get('max_participants').errors.required
+                  userForm3.get('max_participants').invalid &&
+                  userForm3.get('max_participants').errors.required
                 "
               >
                 Max Participants is required
               </mat-error>
               <mat-error
                 *ngIf="
-                  userForm.get('max_participants').invalid &&
-                  userForm.get('max_participants').errors.min
+                  userForm3.get('max_participants').invalid &&
+                  userForm3.get('max_participants').errors.min
                 "
                 >Max Participants should be greater than 0
               </mat-error>
@@ -474,11 +493,11 @@
       </div>
     </mat-tab>
 
-    <mat-tab label="Feature List">
+    <mat-tab label="Feature List" [formGroup]="userForm4" *ngIf="userForm4">
       <div class="container">
         <div class="row">
           <div class="col-md-10 offset-md-1">
-            <mat-label>Select the features you want:</mat-label>
+            <mat-label class="label">Select the Features:</mat-label>
           </div>
         </div>
 
