--- a/mcarbonPortal/src/app/update-account-dialog/update-account-dialog.component.scss
+++ b/mcarbonPortal/src/app/update-account-dialog/update-account-dialog.component.scss
@@ -196,3 +196,8 @@ img {
 ::ng-deep .mat-radio-button.mat-accent .mat-radio-inner-circle {
   background-color: #009688 !important;
 }
+
+.label {
+  font-weight: bolder;
+  font-size: 1rem;
+}
