--- a/mcarbonPortal/src/app/update-user-dialog/update-user-dialog.component.scss
+++ b/mcarbonPortal/src/app/update-user-dialog/update-user-dialog.component.scss
@@ -197,3 +197,8 @@
   ::ng-deep .mat-radio-button.mat-accent .mat-radio-inner-circle {
     background-color: #009688 !important;
   }
+
+  .label {
+    font-weight: bolder;
+    font-size: 1rem;
+  }
