--- a/mcarbonPortal/src/app/view-user-dialog/view-user-dialog.component.html
+++ b/mcarbonPortal/src/app/view-user-dialog/view-user-dialog.component.html
@@ -14,79 +14,120 @@
     *ngIf="userForm"
     [dynamicHeight]="false"
     mat-align-tabs="center"
+    (selectedTabChange)="onTabChanged($event)"
   >
     <mat-tab label="Basic Information">
       <div class="container">
         <div class="row">
           <div class="col-md-5 offset-md-1">
-            <mat-form-field>
-              <input
-                matInput
-                type="text"
-                placeholder="First Name"
-                formControlName="user_fname"
-              />
-            </mat-form-field>
+            <div class="row">
+              <div class="col-md-12 col-custom">
+                <mat-form-field>
+                  <input
+                    matInput
+                    type="text"
+                    placeholder="First Name"
+                    formControlName="user_fname"
+                  />
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 col-custom">
+                <mat-form-field>
+                  <input
+                    matInput
+                    type="tel"
+                    placeholder="Mobile Number"
+                    formControlName="mobile"
+                  />
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 col-custom">
+                <mat-form-field>
+                  <mat-label>Account Expiry Date</mat-label>
+                  <input
+                    matInput
+                    [matDatepicker]="picker"
+                    formControlName="acc_exp_date"
+                  />
+                  <mat-hint>MM/DD/YYYY</mat-hint>
+                  <mat-datepicker-toggle
+                    matIconSuffix
+                    [for]="picker"
+                  ></mat-datepicker-toggle>
+                  <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 col-custom">
+                <mat-form-field>
+                  <input
+                    matInput
+                    type="text"
+                    placeholder="Login ID"
+                    formControlName="login_id"
+                  />
+                </mat-form-field>
+              </div>
+            </div>
           </div>
+
           <div class="col-md-5">
-            <mat-form-field>
+            <div class="row">
+              <div class="col-md-12 col-custom">
+                <mat-form-field>
+                  <input
+                    matInput
+                    type="text"
+                    placeholder="Last Name"
+                    formControlName="user_lname"
+                  />
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 col-custom">
+                <mat-form-field>
+                  <input
+                    matInput
+                    type="email"
+                    placeholder="Email"
+                    formControlName="email"
+                  />
+                </mat-form-field>
+              </div>
+            </div>
+
+            <div class="row justify-content-center align-items-center">
+              <ng-container *ngIf="checkImg()"
+                ><img
+                  [src]="photoUrl"
+                  style="border-radius: 50%"
+                  alt="selected logo"
+                  height="150px"
+                  width="150px"
+              /></ng-container>
+              <ng-container *ngIf="!checkImg()"
+                ><img
+                  src="../../assets/img/user_profile.png"
+                  style="border-radius: 50%"
+                  alt="selected logo"
+                  height="150px"
+                  width="150px"
+              /></ng-container>
+            </div>
+            <div class="row justify-content-center align-items-center">
               <input
-                matInput
-                type="text"
-                placeholder="Last Name"
-                formControlName="user_lname"
+                #fileInput
+                type="file"
+                accept="image/*"
+                (change)="onPhotoSelected($event)"
               />
-            </mat-form-field>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-5 offset-md-1">
-            <mat-form-field>
-              <input
-                matInput
-                type="tel"
-                placeholder="Mobile Number"
-                formControlName="mobile"
-              />
-            </mat-form-field>
-          </div>
-          <div class="col-md-5">
-            <mat-form-field>
-              <input
-                matInput
-                type="email"
-                placeholder="Email"
-                formControlName="email"
-              />
-            </mat-form-field>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-5 offset-md-1">
-            <mat-form-field>
-              <mat-label>Account Expiry Date</mat-label>
-              <input
-                matInput
-                [matDatepicker]="picker"
-                formControlName="acc_exp_date"
-              />
-              <mat-hint>MM/DD/YYYY</mat-hint>
-              <mat-datepicker-toggle
-                matIconSuffix
-                [for]="picker"
-              ></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
-          </div>
-          <div class="col-md-5">
-            <mat-form-field>
-              <input
-                matInput
-                type="text"
-                placeholder="Login ID"
-                formControlName="login_id"
-              />
-            </mat-form-field>
+            </div>
           </div>
         </div>
       </div>
@@ -119,7 +160,7 @@
 
         <div class="row">
           <div class="col-md-10 offset-md-1">
-            <mat-label>Select the Access you want:</mat-label>
+            <mat-label class="label">Access Permissions:</mat-label>
           </div>
         </div>
 
@@ -130,6 +171,7 @@
                 [value]="topAccess.accessId"
                 (change)="toggleAccessId(topAccess, $event.checked)"
                 [checked]="isCheckAccess(topAccess)"
+                disabled
               >
                 {{ topAccess.name }}
               </mat-checkbox>
@@ -145,6 +187,7 @@
                     [value]="access.accessId"
                     (change)="toggleAccessId(access, $event.checked)"
                     [checked]="isCheckAccess(access)"
+                    disabled
                   >
                     {{ access.name }}
                   </mat-checkbox>
@@ -158,6 +201,7 @@
                 [value]="topAccess.accessId"
                 (change)="toggleAccessId(topAccess, $event.checked)"
                 [checked]="isCheckAccess(topAccess)"
+                disabled
               >
                 {{ topAccess.name }}
               </mat-checkbox>
@@ -173,6 +217,7 @@
                     [value]="access.accessId"
                     (change)="toggleAccessId(access, $event.checked)"
                     [checked]="isCheckAccess(access)"
+                    disabled
                   >
                     {{ access.name }}
                   </mat-checkbox>
@@ -228,7 +273,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-10 offset-md-1">
-            <mat-label>Select the features you want:</mat-label>
+            <mat-label class="label">Features:</mat-label>
           </div>
         </div>
 
