Pre recorded video implementation

--- a/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
+++ b/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
@@ -38,8 +38,9 @@
 	[videoMuted]="true"
 	[audioMuted]="true"
 	[broadcastingActivityBroadcastingError]="error"
-	[toolbarPublishVideoButton]="false"
-	[toolbarVideoControlButton]="false"
+	[toolbarPublishVideoButton]="preRecorded"
+	[toolbarVideoControlButton]="preRecorded"
+	[toolbarVideoFilePath]="preRecordedFilePath"
 	[toolbarRecordingButton]="true"
 	[toolbarDisplayLogo]="showLogo"
 	[toolbarDisplaySessionName]="true"
