--- a/mcarbonPortal/src/app/dashboard/dashboard.component.html
+++ b/mcarbonPortal/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-lg-3 col-md-6 col-sm-6">
+      <div class="col-lg-3 col-md-6 col-sm-6" *ngIf="accounts.isDisplay">
         <div class="card card-stats">
           <div class="card-header card-header-warning card-header-icon">
             <div class="card-icon">
@@ -10,7 +10,7 @@
             </div>
             <p class="card-category">Accounts</p>
             <h3 class="card-title">
-              49/50
+              {{accounts.activeAccounts}}/{{accounts.totalAccounts}}
               <small></small>
             </h3>
           </div>
@@ -22,34 +22,34 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 col-sm-6">
+      <div class="col-lg-3 col-md-6 col-sm-6" *ngIf="users.isDisplay">
         <div class="card card-stats">
           <div class="card-header card-header-success card-header-icon">
             <div class="card-icon">
               <i class="material-icons">store</i>
             </div>
             <p class="card-category">Users</p>
-            <h3 class="card-title">200/300</h3>
+            <h3 class="card-title">{{users.activeUsers}}/{{users.totalUsers}}</h3>
           </div>
           <div class="card-footer">
             <div class="stats">
-              <i class="material-icons">date_range</i> Last 24 Hours
+              <i class="material-icons">date_range</i> Since Launch
             </div>
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 col-sm-6">
+      <div class="col-lg-3 col-md-6 col-sm-6" *ngIf="sessions.isDisplay">
         <div class="card card-stats">
           <div class="card-header card-header-danger card-header-icon">
             <div class="card-icon">
               <i class="material-icons">videocam</i>
             </div>
             <p class="card-category">Sessions</p>
-            <h3 class="card-title">75/100</h3>
+            <h3 class="card-title">{{sessions.activeSessions}}/{{sessions.totalSessions}}</h3>
           </div>
           <div class="card-footer">
             <div class="stats">
-              <i class="material-icons">local_offer</i> Tracked from Github
+              <i class="material-icons">local_offer</i> Daily Sessions
             </div>
           </div>
         </div>
@@ -61,7 +61,7 @@
               <i class="fa fa-user"></i>
             </div>
             <p class="card-category">Participants</p>
-            <h3 class="card-title">500+</h3>
+            <h3 class="card-title">{{participants}}</h3>
           </div>
           <div class="card-footer">
             <div class="stats">
@@ -78,7 +78,7 @@
             <div class="ct-chart" id="dailySalesChart"></div>
           </div>
           <div class="card-body">
-            <h4 class="card-title">Daily Account Creation</h4>
+            <h4 class="card-title">Monthly Account Creation</h4>
             <p class="card-category">
               <span class="text-success"
                 ><i class="fa fa-long-arrow-up"></i> 55%
@@ -99,7 +99,7 @@
             <div class="ct-chart" id="websiteViewsChart"></div>
           </div>
           <div class="card-body">
-            <h4 class="card-title">Daily User Creation</h4>
+            <h4 class="card-title">Monthly User Creation</h4>
             <p class="card-category">
               <span class="text-success"
                 ><i class="fa fa-long-arrow-up"></i> 75%
@@ -120,7 +120,7 @@
             <div class="ct-chart" id="completedTasksChart"></div>
           </div>
           <div class="card-body">
-            <h4 class="card-title">Daily Session Creation</h4>
+            <h4 class="card-title">Monthly Session Creation</h4>
             <p class="card-category">
               <span class="text-success"
                 ><i class="fa fa-long-arrow-up"></i> 20%
