--- a/mcarbonPortal/src/app/update-account-dialog/update-account-dialog.component.scss
+++ b/mcarbonPortal/src/app/update-account-dialog/update-account-dialog.component.scss
@@ -201,3 +201,19 @@ img {
   font-weight: bolder;
   font-size: 1rem;
 }
+
+::ng-deep .mat-form-field-infix {
+  display: flex;
+  flex-direction: row;
+}
+
+.photo-container {
+  position: relative;
+}
+.btn-close {
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  color: red;
+  cursor: pointer;
+}
