--- a/mcarbonPortal/src/app/update-user-dialog/update-user-dialog.component.scss
+++ b/mcarbonPortal/src/app/update-user-dialog/update-user-dialog.component.scss
@@ -202,3 +202,20 @@
     font-weight: bolder;
     font-size: 1rem;
   }
+
+  ::ng-deep .mat-form-field-infix {
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .photo-container {
+    position: relative;
+  }
+  .btn-close {
+    position: absolute;
+    background-color: transparent;
+    border: none;
+    color: red;
+    cursor: pointer;
+  }
+  
