Pre recorded video token generation

--- a/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
+++ b/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
@@ -37,6 +37,7 @@
 	[prejoin]="false"
 	[videoMuted]="true"
 	[audioMuted]="true"
+	[toolbarVideoControlButton]="false"
 	[broadcastingActivityBroadcastingError]="error"
 	[toolbarPublishVideoButton]="preRecorded"
 	[toolbarVideoFilePath]="preRecordedFilePath"
